Resolves: fdo#31055 fallback to a default bullet on symbol lack

a) fix up some entries in Wingdings for which we do have a suitable mapping
after all

b) on complete failure for mapping to OpenSymbol show a default
bullet, which is better than no glyph

c) document that the original tables were against StarSymbol which
had extra glyphs (and/or I thought it had)

Change-Id: I5e43cc0a5216e76d00b7df1a69967e08c3656e21
(cherry picked from commit 0d777f33a1d818a7fd27d755e54db64823f46636)